--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -111,7 +111,7 @@ tbody tr:nth-of-type(odd) {
                     <tr>
                         <td>{{ stock.stock_symbol }}</td>
                         <td>{{ stock.shares}}</td>
-                        <td>{{ dollars[loop.index0]}}</td>
+                        <td>{{ stock.price_usd]}}</td>
                         <td>{{ stock.time}}</td>
                     </tr>
 
